make sure the entire filename is visible in the tooltip (#797)

--- a/packages/data-portal-explore/src/components/fileTable.module.scss
+++ b/packages/data-portal-explore/src/components/fileTable.module.scss
@@ -12,3 +12,7 @@
     /*border: 1px solid #999;*/
     width: 150px;
 }
+
+.filenameTooltipContent {
+    word-break: break-word;
+}
